force-app/main/default/objects/Presales_IT_Ticket__c/Presales_IT_Ticket__c.object-meta.xml
<CustomObject>
    <description>Presales IT Help Desk Tickets</description>
    <label>Presales IT Ticket</label>
    <nameField>
        <displayFormat>PIT-{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales IT Tickets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>