force-app/main/default/objects/Presales_IT_Ticket__c/fields/Label_Names__c.field-meta.xml
<CustomField>
    <fullName>Label_Names__c</fullName>
    <label>Label Names</label>
    <length>30</length>
    <type>Text</type>
</CustomField>