force-app/main/default/objects/Presales_IT_Ticket__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>30</length>
    <type>Text</type>
</CustomField>