force-app/main/default/objects/Presales_IT_Ticket__c/fields/Presales_Number__c.field-meta.xml
<CustomField>
    <fullName>Presales_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Number</label>
    <referenceTo>Presales__c</referenceTo>
    <relationshipLabel>Presales IT Tickets</relationshipLabel>
    <relationshipName>Presales_IT_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>