force-app/main/default/objects/Presales_IT_Ticket__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>15</length>
    <type>Text</type>
</CustomField>