force-app/main/default/objects/Presales_IT_Ticket__c/fields/Ticket_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reporter__c</fullName>
    <formula>Presales_Number__r.Solutions_Architect__r.FirstName + &apos; &apos; +  Presales_Number__r.Solutions_Architect__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Reporter</label>
    <type>Text</type>
</CustomField>